* Improved: FLCH controllers and acceleration/deceleration behavior
* Improved: Completely overhauled FLARE and FPA controllers
* Improved: Minor things to improve stability

[Nasal]
* Fixed: Go Around mode might set an invalid airspeed
* Fixed: Go Around initiation using TOGA button while on ground causes system to reset
* Changed: Moved option to use NAV2 Radio into Input instead of Settings

---------------------------------------------------------------------------------------------------------------------

V4.0.3:
[Control Loop]
* Added: Ability to set custom throttle limits
* Fixed: VOR/LOC gain static, causes "wiggling" behavior if intercepting closer to runway (New config required)
* Fixed: Rollout Aileron does not care about small banks

[Nasal]
* Added: HDG SEL/HLD logic for aircraft like 747 that differentiate it
* Fixed: Autoland without A/P setting ignored if A/P is turned off in ALGN or FLARE modes
* Fixed: Nasal error due to incorrect initialization of some stuff
* Fixed: "PITCH" was written with an erroneous space as " PITCH"

[GUI]
* Weird formatting issues in the FMA

---------------------------------------------------------------------------------------------------------------------

V4.0.2:
[Control Loop]
* Fixed: Drift calculation could calculate wrong when parked causing minor issues

[Nasal]
* Added: System resets automatically after flight complete
* Fixed: TOGA can sometimes erroneously disarm LNAV
* Fixed: LNAV Capture/Arm Logic
* Fixed: HDG/TRK bug syncing did not work properly
* Changed: G/A CLB mode now respects altitude target

---------------------------------------------------------------------------------------------------------------------

V4.0.1:
[Control Loop]
* Fixed: Throttle servo used incorrect rates

[Nasal]
* Fixed: Bad FLCH engagement
* Fixed: Delay in updating modes causing some problems
* Changed: Minimum altitude error for FLCH engagement
